--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="background: url('https://c4.wallpaperflare.com/wallpaper/664/554/460/cute-pink-blur-gradation-wallpaper-thumb.jpg'); background-repeat: no-repeat; background-position: center; background-size: cover;">
     <header>
         <center>
-            <h1>Proyecto de Desarrollo de Software para Plataformas Móviles<u>dinámicas</u> :)</h1>
+            <h1>Proyecto de Desarrollo de Software para Plataformas Móviles :)</h1>
         </center>
         <center>
             <font size="5"><i>Trabajos de clase.</i></font>
