--- a/index.html
+++ b/index.html
@@ -19,54 +19,22 @@
         <br>
     </header>
     <nav>
-        <table style="width:50%; margin: 0 auto;" border="1" cellpadding="6" cellspacing="0" bgcolor="#F6E6FF">
+        <table style="width:50; margin: 0 auto;" border="1" cellpadding="6" cellspacing="0" bgcolor="#F6E6FF">
             <tr>
                 <th>trabajo</th>
                 <th>fecha</th>
             </tr>
             <tr>
                 <td><a href="https://kande.000webhostapp.com/trabajos/1_Variables">Trabajo 1</a></td>
-                <td>16.03.2023</td>
+                <td>02.04.2024</td>
             </tr>
             <tr>
                 <td><a href="https://kande.000webhostapp.com/trabajos/2_Formularios">Trabajo 2</a></td>
-                <td>23.03.2023</td>
+                <td>09.04.2024</td>
             </tr>
             <tr>
                 <td><a href="https://kande.000webhostapp.com/trabajos/3_Actividad_Ejercicios%20Secuenciales">Trabajo 3</a></td>
-                <td>27.03.2023</td>
-            </tr>
-            <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/4_Ejercicios%20Condicionales">Trabajo 4</a></td>
-                <td>06.04.2023</td>
-            </tr>
-            <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/5_%20Control%20Radio">Trabajo 5</a></td>
-                <td>20.04.2023</td>
-            </tr>
-            <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/6_hosting_Dominio_Personal">Trabajo 6</a></td>
-                <td>20.04.2023</td>
-            </tr>
-            <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/7_Control%20ChexBox">Trabajo 7</a></td>
-                <td>27.04.2023</td>
-            </tr>
-            <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/8_Control%20radio">Trabajo 8</a></td>
-                <td>26.04.2023</td>
-            </tr>
-            <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/9_Formularios+php">Trabajo 9</a></td>
-                <td>sin fecha de entrega.</td>
-            </tr>
-            <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/10_Validacion%20de%20datos">Trabajo 10</a></td>
-                <td>01.06.2023</td>
-            </tr>
-            <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/11_Php%20base%20de%20datos">Trabajo 11</a></td>
-                <td>24.08.2023</td>
+                <td>16.04.2024</td>
             </tr>
         </table>
         <br>
