--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     }
   </style>
 </head>
-<body style="background: url('https://c4.wallpaperflare.com/wallpaper/664/554/460/cute-pink-blur-gradation-wallpaper-thumb.jpg'); background-repeat: no-repeat; background-position: center; background-size: cover;">
+<body style="background: url('https://c4.wallpaperflare.com/wallpaper/664/554/460/cute-pink-blur-gradation-wallpaper-thumb.jpg'); background-repeat: repeat; background-position: center; background-size: cover;">
     <header>
         <center>
             <h1>Proyecto de Desarrollo de Software para Plataformas Móviles :)</h1>
