--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br>
     </header>
     <nav>
-        <table style="width:50; margin: 0 auto;" border="1" cellpadding="6" cellspacing="0" bgcolor="#F6E6FF">
+        <table style="width:50%; margin: 0 auto;" border="1" cellpadding="6" cellspacing="0" bgcolor="#F6E6FF">
             <tr>
                 <th>trabajo</th>
                 <th>fecha</th>
