--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <td>02.04.2024</td>
             </tr>
             <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/2_Formularios">Trabajo 2</a></td>
+                <td><a href="tp-2/index.html">Trabajo 2</a></td>
                 <td>09.04.2024</td>
             </tr>
             <tr>
@@ -40,7 +40,7 @@
         <br>
     </nav>
     <font size="4" color="#A08F9B">
-        <center><i><u>Mañas Candela. 6to 2da.</u></i></center>
+        <center><i><u>Mañas Candela. 7mo 2da.</u></i></center>
     </font>
 </body>
 </html>
