--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <th>fecha</th>
             </tr>
             <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/1_Variables">Trabajo 1</a></td>
+                <td><a href="./tp-2/index.html">Trabajo 1</a></td>
                 <td>02.04.2024</td>
             </tr>
             <tr>
