--- a/tp-2/index.html
+++ b/tp-2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <link rel="stylesheet" href="estilos.css">
+   <link rel="stylesheet" href="estilo.css">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
