--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <th>fecha</th>
             </tr>
             <tr>
-                <td><a href="./tp-2/index.html">Trabajo 1</a></td>
+                <td>Clase 1 (sin actividad)</a></td>
                 <td>02.04.2024</td>
             </tr>
             <tr>
@@ -33,7 +33,7 @@
                 <td>09.04.2024</td>
             </tr>
             <tr>
-                <td><a href="https://kande.000webhostapp.com/trabajos/3_Actividad_Ejercicios%20Secuenciales">Trabajo 3</a></td>
+                <td><a href="tp-3/index.html">Trabajo 3</a></td>
                 <td>16.04.2024</td>
             </tr>
         </table>
