--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     body, p, .cambiar-fuente {
       font-family: "Times New Roman", serif;
     }
+    .simple-radial {
+  background: radial-gradient(pink, white, brown);
+}
   </style>
 </head>
 <body style="background-color: #ff99aa;">
@@ -25,7 +28,7 @@
                 <th>fecha</th>
             </tr>
             <tr>
-                <td>Clase 1 (sin actividad)</a></td>
+                <td><a href="tp-1/index.html">Trabajo 1</a></td>
                 <td>02.04.2024</td>
             </tr>
             <tr>
@@ -34,8 +37,20 @@
             </tr>
             <tr>
                 <td><a href="tp-3/index.html">Trabajo 3</a></td>
-                <td>16.04.2024</td>
+                <td>23.04.2024</td>
             </tr>
+            <tr>
+                <td><a href="tp-4/index.html">Trabajo 4</a></td>
+                <td>30.04.2024</td>
+            </tr>
+            <tr>
+                <td><a href="tp-5/index.html">Trabajo 5</a></td>
+                <td>07.05.2024</td>
+            </tr>
+            <tr>
+                <td><a href="tp-6/index.html">Trabajo 6</a></td>
+                <td>14.05.2024</td>
+            </tr>            
         </table>
         <br>
     </nav>
