--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     body, p, .cambiar-fuente {
       font-family: "Times New Roman", serif;
     }
-    .simple-radial {
-  background: radial-gradient(pink, white, brown);
-}
   </style>
 </head>
-<body style="background-color: #ff99aa;">
+<body style="background: radial-gradient(circle, #ffd7a7, #ffd3de);">
     <header>
         <center>
             <h1>Proyecto de Desarrollo de Software para Plataformas Móviles :)</h1>
